# Paktolos

./: FIGURE_MANIFEST.json  README.md  REPORT.md  main.py  pyproject.toml
DATA/LOOKUP/: MRT_STATION_COORDINATES_SG.csv
DATA/PROCESSED/: EXPENSES_CLEANED.csv  INCOME_CLEANED.csv
DATA/PROCESSED/arch/: CASH_FLOW_CLEANED.csv
DATA/RAW/: CASH_FLOW_01082019_31072020.csv  CASH_FLOW_COMBINED.csv
DATA/RAW/arch/: CASH_FLOW_01082018_31072019.csv  CASH_FLOW_01082020_31072021.csv  CASH_FLOW_01082021_31072022.csv  CASH_FLOW_01082022_31072023.csv  CASH_FLOW_01082023_31122023.csv
DATA/TEMP/: LOCATION_AGG.csv  MONTHLY_CASH_FLOW_PIVOT_CUMULATIVE_DATE_INDEX.csv
NOTEBOOKS/: CASH_FLOW_DATA_ANALYSIS.ipynb  CASH_FLOW_DATA_CLEANING.ipynb  LOCATION_AGG.csv  TEST.ipynb
NOTEBOOKS/arch/: CASH_FLOW_DATA_ANALYSIS.ipynb  FIGURE_MANIFEST.json  PIE_CHART_TOP_7_SPENDING_CATEGORIES.html  REPORT.md  TEST.ipynb  UNUSED.ipynb
NOTEBOOKS/arch/assets/plots/: manual_test_chart.html  (+1 more)
SCRIPTS/: DATA_ANALYSIS.py  DATA_CLEANING.py  REPORT_MANAGEMENT.py  REPORT_MANAGEMENT_05072025_2.py  TEST.py
SCRIPTS/arch/: REPORT_MANAGEMENT_050725.py  REPORT_MANAGEMENT_090725.py
arch/: CASH_FLOW_DATA_ANALYSIS.ipynb  FIGURE_MANIFEST_.json
arch/CASH_FLOW_DATA_ANALYSIS_V1_UNMODULARIZED/: CASH_FLOW_DATA_ANALYSIS.ipynb  CASH_FLOW_DATA_CLEANING.ipynb  pyproject_.toml  requirements.txt  requirements_backup.txt
arch/CASH_FLOW_DATA_ANALYSIS_V1_UNMODULARIZED/DATASET/: CASH_FLOW_01082018_31072019.csv
arch/CASH_FLOW_DATA_ANALYSIS_V1_UNMODULARIZED/TEMP/: CASH_FLOW_CLEANED.csv  EXPENSES_CLEANED.csv  INCOME_CLEANED.csv
(+1 files in other folders)
