[project]
name = "paktolos"
version = "0.1.0"
description = "Personal cash flow analytics project"
authors = [
    {name = "FAW"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "ruptures (>=1.1.9,<2.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "kaleido (==0.1.0.post1)",
    "html2image (>=2.0.7,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipython = "^9.3.0"
jupyterlab = "^4.4.4"

